scrollbar fix

--- a/src/main.scss
+++ b/src/main.scss
@@ -47,3 +47,9 @@ $danger: #f42524;
     background-clip: content-box;
     background-color: #676767;
 }
+
+//Overview Container
+.overflow-container {
+    overflow-x: hidden !important;
+    overflow-y: auto !important;
+}
